--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,8 @@
 
 html,
 body {
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
+  background-color: black;
+  color: white;
 }
 
 * {
